--- a/package.json
+++ b/package.json
@@ -59,5 +59,8 @@
     "build": "npx vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
