--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
   "scripts": {
     "dev": "vite",
     "build": "npx vite build",
-    "vercel-build": "npm ci && npm run build",
+    "vercel-build": "npm ci && node node_modules/vite/bin/vite.js build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
